--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -56,11 +56,11 @@ a, h2, h4 {
 }
 
 .mission-statement {
-/*  display: flex;
+  display: block;
   align-items: center;
-  justify-content: center;*/
+  justify-content: center;
   background-color: Black;
-  height: 150px;
+  height: 120px;
   width: 1200px;
   text-align: center;
   position: absolute;
@@ -69,6 +69,7 @@ a, h2, h4 {
 
 .mission-statement h2 {
   font-size: 30px;
+  margin-top: 14px;
 }
 
 .specials-container {
@@ -76,6 +77,7 @@ a, h2, h4 {
   width: 1200px;
   align-items: center;
   text-align: center;
+  justify-content: center;
 }
 
 .specials h2, h4 {
@@ -84,6 +86,7 @@ a, h2, h4 {
 
 .tea-headline {
   width: 1000px;
+  margin: 0 auto;
 }
 
 .tea-list {
@@ -93,11 +96,11 @@ a, h2, h4 {
   justify-content: space-around;
   align-content: center;
   width: 1000px;
+  margin: 0 auto;
 }
 
 .tea-image {
   display: block;
-  border: 1px solid red;
   width: 300px;
   height: 280px;
 }
