--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -36,11 +36,12 @@ header nav span {
   padding: 0 30px 0 0;
 }
 
-a, h2, h4 {
+a, h2, h3, h4, h5, span, p {
   font-family: Helvetica, sans-serif;
   font-size: 22px;
   color: seashell;
   opacity: 0.9;
+  text-align: center;
 }
 
 .maincontainer {
@@ -64,24 +65,24 @@ a, h2, h4 {
   width: 1200px;
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 100%;
 }
 
 .mission-statement h2 {
-  font-size: 30px;
-  margin-top: 14px;
+  font-size: 35px;
+  margin-top: 11px;
 }
 
 .specials-container {
-  display: block;
+/*  display: block;
   width: 1200px;
   align-items: center;
   text-align: center;
-  justify-content: center;
+  justify-content: center;*/
 }
 
-.specials h2, h4 {
-  text-align: center;
+.tea-headline h2 {
+  font-size: 35px;
 }
 
 .tea-headline {
@@ -91,22 +92,84 @@ a, h2, h4 {
 
 .tea-list {
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;
+    align-content: center;*/
   flex-wrap: wrap;
-  justify-content: space-around;
-  align-content: center;
+  justify-content: center;
   width: 1000px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .tea-image {
   display: block;
   width: 300px;
   height: 280px;
+  margin: 0 15px;
 }
 
 .tea-image img {
   width: 300px;
   height: 200px;
 
+}
+
+.locations-container {
+  /*display: flex;*/
+  width: 1100px;
+  background-image: url("../images/img-locations-background.jpg");
+  height: 500px;
+  margin: 0 auto;
+}
+
+.locations-image {
+  width: 1100px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.locations-container h2 {
+  font-size: 35px;
+  padding-top: 75px;
+  margin-bottom: 15px;
+}
+
+.location-item {
+  width: 300px;
+  padding: 32px 0px;
+  background-color: black;
+  height: 230px;
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.locations-image h3 {
+  font-size: 25px;
+}
+
+footer {
+  background-color: black;
+  padding: 5px 20px;
+  text-align: center;
+}
+
+footer .contact-info {
+    height: 200px;
+}
+
+footer h2 {
+  font-size: 40px;
+  margin-top: 5px;
+}
+footer h5 {
+  font-size: 18px;
+}
+
+#copyright {
+  text-align: left;
+  margin-left: 20px;
+}
+
+#copyright span {
+    font-size: 18px;
 }
